QtBeef/src/Qt/qcalendarwidget.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QCalendarWidget
// --------------------------------------------------------------
[CRepr]
struct QCalendarWidget_Ptr: void
{
}
extension CQt
{
	[LinkName("QCalendarWidget_new")]
	public static extern QCalendarWidget_Ptr* QCalendarWidget_new(QWidget_Ptr* parent);
	[LinkName("QCalendarWidget_new2")]
	public static extern QCalendarWidget_Ptr* QCalendarWidget_new2();
	[LinkName("QCalendarWidget_Delete")]
	public static extern void QCalendarWidget_Delete(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_MetaObject")]
	public static extern QMetaObject_Ptr* QCalendarWidget_MetaObject(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_Qt_Metacast")]
	public static extern void* QCalendarWidget_Qt_Metacast(QCalendarWidget_Ptr* self, c_char* param1);
	[LinkName("QCalendarWidget_Qt_Metacall")]
	public static extern c_int QCalendarWidget_Qt_Metacall(QCalendarWidget_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QCalendarWidget_Tr")]
	public static extern libqt_string QCalendarWidget_Tr(c_char* s);
	[LinkName("QCalendarWidget_SizeHint")]
	public static extern QSize_Ptr QCalendarWidget_SizeHint(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_MinimumSizeHint")]
	public static extern QSize_Ptr QCalendarWidget_MinimumSizeHint(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SelectedDate")]
	public static extern QDate_Ptr QCalendarWidget_SelectedDate(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_YearShown")]
	public static extern c_int QCalendarWidget_YearShown(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_MonthShown")]
	public static extern c_int QCalendarWidget_MonthShown(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_MinimumDate")]
	public static extern QDate_Ptr QCalendarWidget_MinimumDate(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetMinimumDate")]
	public static extern void QCalendarWidget_SetMinimumDate(QCalendarWidget_Ptr* self, QDate_Ptr date);
	[LinkName("QCalendarWidget_MaximumDate")]
	public static extern QDate_Ptr QCalendarWidget_MaximumDate(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetMaximumDate")]
	public static extern void QCalendarWidget_SetMaximumDate(QCalendarWidget_Ptr* self, QDate_Ptr date);
	[LinkName("QCalendarWidget_FirstDayOfWeek")]
	public static extern Qt_DayOfWeek QCalendarWidget_FirstDayOfWeek(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetFirstDayOfWeek")]
	public static extern void QCalendarWidget_SetFirstDayOfWeek(QCalendarWidget_Ptr* self, Qt_DayOfWeek dayOfWeek);
	[LinkName("QCalendarWidget_IsNavigationBarVisible")]
	public static extern bool QCalendarWidget_IsNavigationBarVisible(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_IsGridVisible")]
	public static extern bool QCalendarWidget_IsGridVisible(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_Calendar")]
	public static extern QCalendar_Ptr QCalendarWidget_Calendar(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetCalendar")]
	public static extern void QCalendarWidget_SetCalendar(QCalendarWidget_Ptr* self, QCalendar_Ptr calendar);
	[LinkName("QCalendarWidget_SelectionMode")]
	public static extern QCalendarWidget_SelectionMode QCalendarWidget_SelectionMode(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetSelectionMode")]
	public static extern void QCalendarWidget_SetSelectionMode(QCalendarWidget_Ptr* self, QCalendarWidget_SelectionMode mode);
	[LinkName("QCalendarWidget_HorizontalHeaderFormat")]
	public static extern QCalendarWidget_HorizontalHeaderFormat QCalendarWidget_HorizontalHeaderFormat(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetHorizontalHeaderFormat")]
	public static extern void QCalendarWidget_SetHorizontalHeaderFormat(QCalendarWidget_Ptr* self, QCalendarWidget_HorizontalHeaderFormat format);
	[LinkName("QCalendarWidget_VerticalHeaderFormat")]
	public static extern QCalendarWidget_VerticalHeaderFormat QCalendarWidget_VerticalHeaderFormat(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetVerticalHeaderFormat")]
	public static extern void QCalendarWidget_SetVerticalHeaderFormat(QCalendarWidget_Ptr* self, QCalendarWidget_VerticalHeaderFormat format);
	[LinkName("QCalendarWidget_HeaderTextFormat")]
	public static extern QTextCharFormat_Ptr QCalendarWidget_HeaderTextFormat(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetHeaderTextFormat")]
	public static extern void QCalendarWidget_SetHeaderTextFormat(QCalendarWidget_Ptr* self, QTextCharFormat_Ptr* format);
	[LinkName("QCalendarWidget_WeekdayTextFormat")]
	public static extern QTextCharFormat_Ptr QCalendarWidget_WeekdayTextFormat(QCalendarWidget_Ptr* self, Qt_DayOfWeek dayOfWeek);
	[LinkName("QCalendarWidget_SetWeekdayTextFormat")]
	public static extern void QCalendarWidget_SetWeekdayTextFormat(QCalendarWidget_Ptr* self, Qt_DayOfWeek dayOfWeek, QTextCharFormat_Ptr* format);
	[LinkName("QCalendarWidget_DateTextFormat")]
	public static extern void* QCalendarWidget_DateTextFormat(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_DateTextFormat2")]
	public static extern QTextCharFormat_Ptr QCalendarWidget_DateTextFormat2(QCalendarWidget_Ptr* self, QDate_Ptr date);
	[LinkName("QCalendarWidget_SetDateTextFormat")]
	public static extern void QCalendarWidget_SetDateTextFormat(QCalendarWidget_Ptr* self, QDate_Ptr date, QTextCharFormat_Ptr* format);
	[LinkName("QCalendarWidget_IsDateEditEnabled")]
	public static extern bool QCalendarWidget_IsDateEditEnabled(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetDateEditEnabled")]
	public static extern void QCalendarWidget_SetDateEditEnabled(QCalendarWidget_Ptr* self, bool enable);
	[LinkName("QCalendarWidget_DateEditAcceptDelay")]
	public static extern c_int QCalendarWidget_DateEditAcceptDelay(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetDateEditAcceptDelay")]
	public static extern void QCalendarWidget_SetDateEditAcceptDelay(QCalendarWidget_Ptr* self, c_int delay);
	[LinkName("QCalendarWidget_Event")]
	public static extern bool QCalendarWidget_Event(QCalendarWidget_Ptr* self, QEvent_Ptr* event);
	[LinkName("QCalendarWidget_EventFilter")]
	public static extern bool QCalendarWidget_EventFilter(QCalendarWidget_Ptr* self, QObject_Ptr* watched, QEvent_Ptr* event);
	[LinkName("QCalendarWidget_MousePressEvent")]
	public static extern void QCalendarWidget_MousePressEvent(QCalendarWidget_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QCalendarWidget_ResizeEvent")]
	public static extern void QCalendarWidget_ResizeEvent(QCalendarWidget_Ptr* self, QResizeEvent_Ptr* event);
	[LinkName("QCalendarWidget_KeyPressEvent")]
	public static extern void QCalendarWidget_KeyPressEvent(QCalendarWidget_Ptr* self, QKeyEvent_Ptr* event);
	[LinkName("QCalendarWidget_PaintCell")]
	public static extern void QCalendarWidget_PaintCell(QCalendarWidget_Ptr* self, QPainter_Ptr* painter, QRect_Ptr* rect, QDate_Ptr date);
	[LinkName("QCalendarWidget_UpdateCell")]
	public static extern void QCalendarWidget_UpdateCell(QCalendarWidget_Ptr* self, QDate_Ptr date);
	[LinkName("QCalendarWidget_UpdateCells")]
	public static extern void QCalendarWidget_UpdateCells(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SetSelectedDate")]
	public static extern void QCalendarWidget_SetSelectedDate(QCalendarWidget_Ptr* self, QDate_Ptr date);
	[LinkName("QCalendarWidget_SetDateRange")]
	public static extern void QCalendarWidget_SetDateRange(QCalendarWidget_Ptr* self, QDate_Ptr min, QDate_Ptr max);
	[LinkName("QCalendarWidget_SetCurrentPage")]
	public static extern void QCalendarWidget_SetCurrentPage(QCalendarWidget_Ptr* self, c_int year, c_int month);
	[LinkName("QCalendarWidget_SetGridVisible")]
	public static extern void QCalendarWidget_SetGridVisible(QCalendarWidget_Ptr* self, bool show);
	[LinkName("QCalendarWidget_SetNavigationBarVisible")]
	public static extern void QCalendarWidget_SetNavigationBarVisible(QCalendarWidget_Ptr* self, bool visible);
	[LinkName("QCalendarWidget_ShowNextMonth")]
	public static extern void QCalendarWidget_ShowNextMonth(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_ShowPreviousMonth")]
	public static extern void QCalendarWidget_ShowPreviousMonth(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_ShowNextYear")]
	public static extern void QCalendarWidget_ShowNextYear(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_ShowPreviousYear")]
	public static extern void QCalendarWidget_ShowPreviousYear(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_ShowSelectedDate")]
	public static extern void QCalendarWidget_ShowSelectedDate(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_ShowToday")]
	public static extern void QCalendarWidget_ShowToday(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_SelectionChanged")]
	public static extern void QCalendarWidget_SelectionChanged(QCalendarWidget_Ptr* self);
	[LinkName("QCalendarWidget_Clicked")]
	public static extern void QCalendarWidget_Clicked(QCalendarWidget_Ptr* self, QDate_Ptr date);
	[LinkName("QCalendarWidget_Activated")]
	public static extern void QCalendarWidget_Activated(QCalendarWidget_Ptr* self, QDate_Ptr date);
	[LinkName("QCalendarWidget_CurrentPageChanged")]
	public static extern void QCalendarWidget_CurrentPageChanged(QCalendarWidget_Ptr* self, c_int year, c_int month);
	[LinkName("QCalendarWidget_Tr2")]
	public static extern libqt_string QCalendarWidget_Tr2(c_char* s, c_char* c);
	[LinkName("QCalendarWidget_Tr3")]
	public static extern libqt_string QCalendarWidget_Tr3(c_char* s, c_char* c, c_int n);
}
